project view screenshots are larger on mobile and smaller on desktop. Fixed bug where sections would hide under 800px but the smaller project view would only activate at under 725

--- a/styles/project-view.css
+++ b/styles/project-view.css
@@ -121,6 +121,12 @@
   margin: 20px 20px 10px;
 }
 
+@media (min-width: 1025px) {
+  .full-view-thumbnail {
+    height: 16rem;
+  }
+}
+
 .specific-info {
   display: flex;
   flex-direction: column;
